--- a/image_enhancement/T1_U2.ipynb
+++ b/image_enhancement/T1_U2.ipynb
@@ -70,7 +70,7 @@
    "source": [
     "# Apply power transformation\n",
     "gamma = 2.0\n",
-    "power_transformed_image = np.array(255 * (image / 255) ** gamma, dtype='uint8')\n"
+    "power_transformed_image = np.array(255 * (image / 255) ** gamma, dtype='uint8')#\n"
    ]
   },
   {
